tests/paczka1/fuzzy1/65957636.err
Error in line 2: nRf9zMMC S186 67,8
Error in line 8: ArZyBM S527 -3,95
Error in line 15: zurpyFk S186 60,3
Error in line 13: nRf9zMMC S565 39,9
Error in line 17: zurpyFk S565 79,0
Error in line 27: S186 S186 60,6
Error in line 33: OuARCcN0n S186 84,0
Error in line 24: ArZyBM S527 64,7
